--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,28 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-      {
-        "type": "node",
-        "request": "launch",
-        "name": "Launch TypeScript",
-        "preLaunchTask": "Compile TypeScript",
-        "cwd": "${workspaceFolder}",
-        "program": "${file}"
-      }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Jest Tests",
+      "program": "${workspaceFolder}/node_modules/.bin/jest",
+      "args": [
+        "--runInBand",
+        "--config",
+        "${workspaceFolder}/jest.config.js",
+        "--no-cache" // オプション：キャッシュを無効化
+      ],
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "env": {
+        "NODE_ENV": "test",
+        "TS_NODE_TRANSPILE_ONLY": "true" // 必要に応じて
+      },
+      "sourceMaps": true,
+      "outFiles": [
+        "${workspaceFolder}/build/**/*.js"
+      ]
+    }
+  ]
 }
-  
